frontend/test/typecheck/error/param-count-mismatch.fc
void foo(int i) {}

void bar() {
    foo(1, 2);
}
